# Data_science2_Spam_filter

./: .gitignore  pyproject.toml
src/spam_filter/: main.py  main_ugly.py
